# proxop

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
src/proxop/: ___main__.py  __init__.py
src/proxop/indicator/: BoxConstraint.py  EpiAbsValue.py  EpiDistance.py  EpiExp.py  EpiHingeLoss.py  EpiL2Norm.py  EpiLinfNorm.py  EpiLog.py  EpiMax.py  EpiPower.py  EpiSquaredHingeLoss.py  EpiSupport.py  ExtendedSimplex.py  Hyperplane.py  Hyperslab.py  L1Ball.py  L1_2Ball.py  L2Ball.py  LinfBall.py  LogProjection.py  MonotoneCone.py  PositiveL2Ball.py  Simplex.py  __init__.py
src/proxop/multi/: AbsDiff.py  AffineBarrier.py  ChiSquare.py  Hellinger.py  HyperslabBarrier.py  Ialpha.py  InvPenaltyLogDet.py  Jeffrey.py  Kullback.py  L21columns.py  L21rows.py  L2BallBarrier.py  L2DownConv.py  L2Norm.py  L2Positive.py  Linf.py  Linf1.py  LogDet.py  Max.py  NeumannEntropy.py  NuclearBall.py  NuclearBlocks.py  NuclearLogDet.py  NuclearNorm.py  NuclearNormRidge.py  PermutationInvariant.py  PersAbsDiff.py  PersHuber.py  PersSqrt.py  PersSquare.py  PersVapnik.py  Rank.py  RankRidge.py  Renyi.py  Schatten3Penalty.py  Schatten3_2Penalty.py  Schatten4Penalty.py  Schatten4_3Penalty.py  SchattenPenaltyLogDet.py  Spectral.py  (+3 more)
src/proxop/nonconvex/: BurgCauchy.py  BurgLogSum.py  CEL0.py  CapL1.py  Cauchy.py  ConicL0.py  EntropyCauchy.py  EntropyL0.py  EntropyLogSum.py  L0L2Norm.py  L0Norm.py  LogSum.py  MCP.py  Root.py  SCAD.py  Truncated.py  TruncatedNorm.py  __init__.py
src/proxop/scalar/: AbsValue.py  ArctanActi.py  ArgsinhActi.py  Bathtub.py  BentIdentity.py  Berhu.py  BregExp.py  (+36 more)
(+57 files in other folders)
